--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fluentui/react": "^8.123.4",
     "@fluentui/react-components": "^9.68.3",
+    "@fluentui/react-datepicker-compat": "^0.6.13",
     "@fluentui/react-icons": "^2.0.307",
+    "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
     "notistack": "^3.0.2",
     "react": "^19.1.1",
